// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen ivrs config import-export] should create the ivrs: the ivrs have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ application => IVRServer-Application
+ ivr => cfgObjectTest
Completed. 2 object(s) imported.
",
}
`;

exports[`[mutagen ivrs config import-export] should throw exception when new ivrs to import miss mandatory properties ivrs: exception has been thrown 1`] = `
Object {
  "stderr": "Cannot import configuration: some configuration objects' mandatory properties for creation are not set.
  Properties [tenant, type, version] not set in ivr [invalid].
",
  "stdout": "",
}
`;

exports[`[mutagen ivrs config import-export] should update the modified ivrs: the modified ivrs have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ ivr => cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen ivrs config import-export] should update the same ivrs: the ivrs have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ application => IVRServer-Application
~ ivr => cfgObjectTest
Completed. 2 object(s) imported.
",
}
`;
